--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-router-dom": "^6.29.0",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
