--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.3.0",
+    "highlight.js": "^11.11.1",
+    "prop-types": "^15.8.1",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-quilljs": "^2.0.5",
     "react-router-dom": "^6.29.0",
     "swiper": "^11.2.1"
   },
