--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.3",
     "c3": "^0.7.20",
     "d3": "^7.9.0",
+    "dom-parser-react": "^0.3.1",
     "gh-pages": "^6.3.0",
     "highlight.js": "^11.11.1",
     "prop-types": "^15.8.1",
