--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.3",
     "c3": "^0.7.20",
     "d3": "^7.9.0",
+    "dayjs": "^1.11.13",
     "dom-parser-react": "^0.3.1",
     "gh-pages": "^6.3.0",
     "highlight.js": "^11.11.1",
