--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
