--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dom-parser-react": "^0.3.1",
     "gh-pages": "^6.3.0",
     "highlight.js": "^11.11.1",
+    "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "quill": "^2.0.3",
     "react": "^18.3.1",
