1. 修正編輯banner modal送出提醒跟自帶資料防止錯誤 2. 修正留言按讚顯示問題 3. 修正分頁元件樣式統一 4. 修正編輯文章modal預設可以隨意選填你要的欄位更新，就算是清空也不會不小心覆蓋複寫原本文章內容，不過要清空文章內容只能刪除文章才能做到 5. 清除之前console.log 跟測試頁面 6. 上傳.env給培訓班檢查，檢查完後就會刪除以保護網站安全

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,9 @@ dist-ssr
 *.local
 
 # 隱私與環境變數
-.env
-.env.local
-.env.*.local
+# .env
+# .env.local
+# .env.*.local
 
 # Editor directories and files
 .vscode/*
