--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.6.0",
+    "@sentry/react": "^9.9.0",
+    "@sentry/tracing": "^7.120.3",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "c3": "^0.7.20",
