--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,15 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+         # ✅ 加入這段強制排錯
+      - name: Clean up possible directory conflict
+        run: |
+          if [ -d index.html ]; then
+            echo "⚠️ index.html 是資料夾，將會被移除"
+            rm -rf index.html
+            git checkout index.html
+          fi
+
       - name: Set environment variables
         run: echo "VITE_API_BASE_URL=${{ secrets.VITE_API_BASE_URL }}" > .env.production
 
